fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -113,7 +113,7 @@
     display: flex;
     flex-direction: row-reverse;
     height: 85vh;
-    overflow: auto;
+    overflow: none;
     
   }
 
